[package]
name = "lever"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-skiplist = "0.1.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"
bytes = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
rand = "0.9.0"
tempfile = "3.16.0"
rcu_list = "0.1.1"

[dev-dependencies]
rand = "0.9.0"
