[package]
name = "lsmkv"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-skiplist = "0.1.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"
bytes = "1.10.0"
rand = "0.9.0"
tempfile = "3.16.0"
scc = "2.3.3"
crossbeam-queue = "0.3.12"
crc32fast = "1.4.2"
farmhash = "1.1.5"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
dashmap = "6.1.0"


[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rand = "0.9.0"
